Renamed method to_mml → tomathml

--- a/docs/README.ipynb
+++ b/docs/README.ipynb
@@ -62,7 +62,7 @@
     }
    ],
    "source": [
-    "ET.dump(expr.to_mml())"
+    "ET.dump(expr.tomathml())"
    ]
   },
   {
@@ -110,7 +110,7 @@
    ],
    "source": [
     "x = Identifier('x', mathvariant='bold')\n",
-    "ET.dump(x.to_mml())"
+    "ET.dump(x.tomathml())"
    ]
   },
   {
@@ -151,7 +151,7 @@
    ],
    "source": [
     "expr = Sup('a', 2, superscriptshift='0.5em')\n",
-    "ET.dump(expr.to_mml())"
+    "ET.dump(expr.tomathml())"
    ]
   },
   {
@@ -181,9 +181,9 @@
       "which produces the following MathML code\n",
       "\n",
       "    <msubsup>\n",
-      "        to_mml(base)\n",
-      "        to_mml(subscript)\n",
-      "        to_mml(superscript)\n",
+      "        tomathml(base)\n",
+      "        tomathml(subscript)\n",
+      "        tomathml(superscript)\n",
       "    </msubsup>\n"
      ]
     }
@@ -272,12 +272,12 @@
    ],
    "source": [
     "expr = f(x[1], x[2], x[3])**2\n",
-    "ET.dump(expr.to_mml())"
+    "ET.dump(expr.tomathml())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
     }
    ],
    "source": [
-    "display(IPython.display.HTML(ET.tostring(pymathml.utils.to_mml(expr, display='block'), encoding='unicode')))"
+    "display(IPython.display.HTML(ET.tostring(pymathml.utils.tomathml(expr, display='block'), encoding='unicode')))"
    ]
   }
  ],
