Using MathJax with GitHub-flavoured Markdown?

--- a/docs/README.ipynb
+++ b/docs/README.ipynb
@@ -62,7 +62,7 @@
     }
    ],
    "source": [
-    "ET.dump(expr.tomathml())"
+    "print(expr)"
    ]
   },
   {
@@ -110,7 +110,7 @@
    ],
    "source": [
     "x = Identifier('x', mathvariant='bold')\n",
-    "ET.dump(x.tomathml())"
+    "print(x)"
    ]
   },
   {
@@ -151,7 +151,7 @@
    ],
    "source": [
     "expr = Sup('a', 2, superscriptshift='0.5em')\n",
-    "ET.dump(expr.tomathml())"
+    "print(expr)"
    ]
   },
   {
@@ -161,35 +161,6 @@
     "(note that strings and numbers are automatically converted to ``mi`` and ``mn``\n",
     "children elements, respectively). When relevant, the docstring of the derived\n",
     "``Element`` lists non-keyword arguments. For example"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PyMathML representation of the ``msubsup`` element.\n",
-      "\n",
-      "See MathML specifications, section 3.4.3.\n",
-      "\n",
-      "Usage: ``SubSup(base, subscript, superscript, **attributes)``\n",
-      "\n",
-      "which produces the following MathML code\n",
-      "\n",
-      "    <msubsup>\n",
-      "        tomathml(base)\n",
-      "        tomathml(subscript)\n",
-      "        tomathml(superscript)\n",
-      "    </msubsup>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(inspect.getdoc(SubSup))"
    ]
   },
   {
@@ -272,23 +243,12 @@
    ],
    "source": [
     "expr = f(x[1], x[2], x[3])**2\n",
-    "ET.dump(expr.tomathml())"
+    "print(expr)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import IPython.display"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -297,16 +257,26 @@
        "<math display=\"block\" xmlns=\"http://www.w3.org/1998/Math/MathML\"><msup><mrow><mi>f</mi><mo>⁡</mo><mfenced><msub><mi>x</mi><mn>1</mn></msub><msub><mi>x</mi><mn>2</mn></msub><msub><mi>x</mi><mn>3</mn></msub></mfenced></mrow><mn>2</mn></msup></math>"
       ],
       "text/plain": [
-       "<IPython.core.display.HTML object>"
+       "Sup(Row(Identifier('f'), Operator('\\u2061'), Fenced(Sub(Identifier('x'), Number(1)), Sub(Identifier('x'), Number(2)), Sub(Identifier('x'), Number(3)))), Number(2))"
       ]
      },
+     "execution_count": 9,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "display(IPython.display.HTML(ET.tostring(pymathml.utils.tomathml(expr, display='block'), encoding='unicode')))"
+    "expr"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
