Tutorial: magic methods

--- a/docs/README.ipynb
+++ b/docs/README.ipynb
@@ -69,6 +69,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "PyMathML objects can be displayed in the Jupyter Notebook like so"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<math display=\"block\" xmlns=\"http://www.w3.org/1998/Math/MathML\"><mrow><mrow><msup><mi>a</mi><mn>2</mn></msup><mo>+</mo><mrow><mrow><mn>2</mn><mo>⁢</mo><mi>a</mi></mrow><mo>⁢</mo><mi>b</mi></mrow></mrow><mo>+</mo><msup><mi>b</mi><mn>2</mn></msup></mrow></math>"
+      ],
+      "text/plain": [
+       "Plus(Plus(Sup(Identifier('a'), Number(2)), Times(Times(Number(2), Identifier('a')), Identifier('b'))), Sup(Identifier('b'), Number(2)))"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Tutorial\n",
     "\n",
     "The present version of PyMathML is restricted to *Presentation MathML* (see\n",
@@ -97,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -219,13 +249,35 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<math display=\"block\" xmlns=\"http://www.w3.org/1998/Math/MathML\"><msup><mrow><mi>f</mi><mo>⁡</mo><mfenced><msub><mi>x</mi><mn>1</mn></msub><msub><mi>x</mi><mn>2</mn></msub><msub><mi>x</mi><mn>3</mn></msub></mfenced></mrow><mn>2</mn></msup></math>"
+      ],
+      "text/plain": [
+       "Sup(Row(Identifier('f'), Operator('\\u2061'), Fenced(Sub(Identifier('x'), Number(1)), Sub(Identifier('x'), Number(2)), Sub(Identifier('x'), Number(3)))), Number(2))"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "f = Identifier('f')\n",
-    "x = Identifier('x')"
+    "x = Identifier('x')\n",
+    "\n",
+    "expr = f(x[1], x[2], x[3])**2\n",
+    "expr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "which results in the following MathML code"
    ]
   },
   {
@@ -242,41 +294,36 @@
     }
    ],
    "source": [
-    "expr = f(x[1], x[2], x[3])**2\n",
     "print(expr)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<math display=\"block\" xmlns=\"http://www.w3.org/1998/Math/MathML\"><msup><mrow><mi>f</mi><mo>⁡</mo><mfenced><msub><mi>x</mi><mn>1</mn></msub><msub><mi>x</mi><mn>2</mn></msub><msub><mi>x</mi><mn>3</mn></msub></mfenced></mrow><mn>2</mn></msup></math>"
-      ],
-      "text/plain": [
-       "Sup(Row(Identifier('f'), Operator('\\u2061'), Fenced(Sub(Identifier('x'), Number(1)), Sub(Identifier('x'), Number(2)), Sub(Identifier('x'), Number(3)))), Number(2))"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "expr"
+    "#### Conversion table for magic methods\n",
+    "\n",
+    "In the table below, ``e``, ``e1`` and ``e2`` are PyMathML expressions, ``me``,\n",
+    "``me1`` and ``me2`` are their translation to MathML.\n",
+    "\n",
+    "| PyMathML   | MathML                                                 |\n",
+    "|------------|--------------------------------------------------------|\n",
+    "| ``+e``     | ``<mrow><mo>+</mo>me</mrow>``                          |\n",
+    "| ``-e``     | ``<mrow><mo>-</mo>me</mrow>``                          |\n",
+    "| ``e1+e2``  | ``<mrow>me1<mo>+</mo>me2</mrow>``                      |\n",
+    "| ``e1-e2``  | ``<mrow>me1<mo>-</mo>me2</mrow>``                      |\n",
+    "| ``e1*e2``  | ``<mrow>me1<mo>&it;</mo>me2</mrow>``                   |\n",
+    "| ``e1**e2`` | ``<msup>me1 me2</msup>``                               |\n",
+    "| ``e1[e2]`` | ``<msub>me1 me2</msub>``                               |\n",
+    "| ``e1(e2)`` | ``<mrow>me1<mo>&af;</mo><mfenced>e2</mfenced></mrow>`` |"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Caveat"
+   ]
   }
  ],
  "metadata": {
