Tutorial: caveat on automatic fencing

--- a/docs/README.ipynb
+++ b/docs/README.ipynb
@@ -322,7 +322,112 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Caveat"
+    "#### Caveat\n",
+    "\n",
+    "Expressions are *not* automatically parenthetized. For example, the following snippet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "a = Identifier('a')\n",
+    "b = Identifier('b')\n",
+    "expr = (a+b)**2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "results in the following MathML code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<msup><mrow><mi>a</mi><mo>+</mo><mi>b</mi></mrow><mn>2</mn></msup>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(expr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a limitation of this package, *not a bug*. Indeed, close inspection of\n",
+    "the above MathML code reveals that the expression ``a+b`` is enclosed in a\n",
+    "``mrow`` element, so that ``a+b`` is indeed squared. However, this expression\n",
+    "is rendered as follows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<math display=\"block\" xmlns=\"http://www.w3.org/1998/Math/MathML\"><msup><mrow><mi>a</mi><mo>+</mo><mi>b</mi></mrow><mn>2</mn></msup></math>"
+      ],
+      "text/plain": [
+       "Sup(Plus(Identifier('a'), Identifier('b')), Number(2))"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "which is not what is expected. Until automatic fencing is implemented (see\n",
+    "[issue 1](https://github.com/sbrisard/pymathml/issues/1)), this is how the\n",
+    "above expression should be defined"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<math display=\"block\" xmlns=\"http://www.w3.org/1998/Math/MathML\"><msup><mfenced><mrow><mi>a</mi><mo>+</mo><mi>b</mi></mrow></mfenced><mn>2</mn></msup></math>"
+      ],
+      "text/plain": [
+       "Sup(Fenced(Plus(Identifier('a'), Identifier('b'))), Number(2))"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expr = Fenced(a+b)**2\n",
+    "expr"
    ]
   }
  ],
