Tutorial: converting PyMathML expressions to MathML

--- a/docs/README.ipynb
+++ b/docs/README.ipynb
@@ -21,11 +21,9 @@
    "outputs": [],
    "source": [
     "import inspect\n",
-    "import xml.etree.ElementTree as ET\n",
     "\n",
-    "import pymathml.utils\n",
-    "\n",
-    "from pymathml import *"
+    "from pymathml import *\n",
+    "from pymathml.utils import *"
    ]
   },
   {
@@ -324,7 +322,8 @@
    "source": [
     "#### Caveat\n",
     "\n",
-    "Expressions are *not* automatically parenthetized. For example, the following snippet"
+    "Expressions are *not* automatically parenthetized. For example, the following\n",
+    "snippet"
    ]
   },
   {
@@ -428,6 +427,213 @@
    "source": [
     "expr = Fenced(a+b)**2\n",
     "expr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Converting PyMathML expressions to MathML"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us define a PyMathML expression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "a, b, c, x = identifiers('a', 'b', 'c', 'x')\n",
+    "expr = a*x**2+b*x+c"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then ``str(expr)`` returns its MathML representation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<mrow><mrow><mrow><mi>a</mi><mo>⁢</mo><msup><mi>x</mi><mn>2</mn></msup></mrow><mo>+</mo><mrow><mi>b</mi><mo>⁢</mo><mi>x</mi></mrow></mrow><mo>+</mo><mi>c</mi></mrow>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(expr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "PyMathML expressions can be displayed (using MathJax) in Jupyter notebooks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<math display=\"block\" xmlns=\"http://www.w3.org/1998/Math/MathML\"><mrow><mrow><mrow><mi>a</mi><mo>⁢</mo><msup><mi>x</mi><mn>2</mn></msup></mrow><mo>+</mo><mrow><mi>b</mi><mo>⁢</mo><mi>x</mi></mrow></mrow><mo>+</mo><mi>c</mi></mrow></math>"
+      ],
+      "text/plain": [
+       "Plus(Plus(Times(Identifier('a'), Sup(Identifier('x'), Number(2))), Times(Identifier('b'), Identifier('x'))), Identifier('c'))"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "``expr.tomathml()`` returns the MathML representation of ``expr`` as an\n",
+    "``Element`` from the ``xml.etree.ElementTree`` module in the\n",
+    "[standard library](https://docs.python.org/3/library/xml.etree.elementtree.html#module-xml.etree.ElementTree)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "xml.etree.ElementTree.Element"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mml = expr.tomathml()\n",
+    "type(mml)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "which can then be converted to XML as follows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<mrow><mrow><mrow><mi>a</mi><mo>⁢</mo><msup><mi>x</mi><mn>2</mn></msup></mrow><mo>+</mo><mrow><mi>b</mi><mo>⁢</mo><mi>x</mi></mrow></mrow><mo>+</mo><mi>c</mi></mrow>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import xml.etree.ElementTree as ET\n",
+    "\n",
+    "print(ET.tostring(mml, encoding='unicode'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The function ``tomathml`` promotes its argument to a PyMathML expression, and\n",
+    "calls the ``tomathml()`` method\n",
+    "embeds the expression in a ``math`` element. The optional argu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<mi>a</mi>\n"
+     ]
+    }
+   ],
+   "source": [
+    "mml = tomathml('a')\n",
+    "print(ET.tostring(mml, encoding=('unicode')))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If the optional argument ``display`` is specified, the expression is enclosed\n",
+    "in a ``math`` element, with the specified ``display`` attribute"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<math display=\"block\" xmlns=\"http://www.w3.org/1998/Math/MathML\"><mi>a</mi></math>\n"
+     ]
+    }
+   ],
+   "source": [
+    "mml = tomathml('a', display='block')\n",
+    "print(ET.tostring(mml, encoding=('unicode')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<math display=\"inline\" xmlns=\"http://www.w3.org/1998/Math/MathML\"><mi>a</mi></math>\n"
+     ]
+    }
+   ],
+   "source": [
+    "mml = tomathml('a', display='inline')\n",
+    "print(ET.tostring(mml, encoding=('unicode')))"
    ]
   }
  ],
