Use the ``identifiers`` convenience function

--- a/docs/README.ipynb
+++ b/docs/README.ipynb
@@ -29,13 +29,10 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "a = Identifier('a')\n",
-    "b = Identifier('b')\n",
+    "a, b = identifiers('a', 'b')\n",
     "expr = a**2+2*a*b+b**2"
    ]
   },
@@ -264,8 +261,7 @@
     }
    ],
    "source": [
-    "f = Identifier('f')\n",
-    "x = Identifier('x')\n",
+    "f, x = identifiers('f', 'x')\n",
     "\n",
     "expr = f(x[1], x[2], x[3])**2\n",
     "expr"
@@ -334,8 +330,7 @@
    },
    "outputs": [],
    "source": [
-    "a = Identifier('a')\n",
-    "b = Identifier('b')\n",
+    "a, b = identifiers('a', 'b')\n",
     "expr = (a+b)**2"
    ]
   },
@@ -468,15 +463,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<mrow><mrow><mrow><mi>a</mi><mo>⁢</mo><msup><mi>x</mi><mn>2</mn></msup></mrow><mo>+</mo><mrow><mi>b</mi><mo>⁢</mo><mi>x</mi></mrow></mrow><mo>+</mo><mi>c</mi></mrow>\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'<mrow><mrow><mrow><mi>a</mi><mo>\\u2062</mo><msup><mi>x</mi><mn>2</mn></msup></mrow><mo>+</mo><mrow><mi>b</mi><mo>\\u2062</mo><mi>x</mi></mrow></mrow><mo>+</mo><mi>c</mi></mrow>'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(expr)"
+    "str(expr)"
    ]
   },
   {
