--- a/docs/README.ipynb
+++ b/docs/README.ipynb
@@ -568,8 +568,7 @@
    "metadata": {},
    "source": [
     "The function ``tomathml`` promotes its argument to a PyMathML expression, and\n",
-    "calls the ``tomathml()`` method\n",
-    "embeds the expression in a ``math`` element. The optional argu"
+    "calls the ``tomathml()`` method"
    ]
   },
   {
