--- a/docs/tutorial.ipynb
+++ b/docs/tutorial.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PyMathML\n",
+    "# Contents\n",
+    "\n",
+    "  - [Introduction](#Introduction)\n",
+    "  - [Basic MathML elements](#Basic-MathML-elements)\n",
+    "    - [Token elements](#Token-elements)\n",
+    "    - [Non-token elements](#Non-token-elements)\n",
+    "  - [Building complex expressions with special methods](#Building-complex-expressions-with-special-methods)\n",
+    "  - [Converting PyMathML expressions to MathML](#Converting-PyMathML-expressions-to-MathML)\n",
+    "\n",
+    "# Introduction\n",
     "\n",
     "PyMathML is a Python package to create MathML expressions programatically.\n",
     "\n",
@@ -29,7 +38,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "a, b = identifiers('a', 'b')\n",
@@ -94,13 +105,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tutorial\n",
-    "\n",
     "The present version of PyMathML is restricted to *Presentation MathML* (see\n",
     "MathML specifications, [chapter 3](https://www.w3.org/TR/MathML3/chapter3.html)).\n",
     "All MathML elements are defined as PyMathML objects.\n",
     "\n",
-    "### Creating token elements\n",
+    "# Basic MathML elements\n",
+    "\n",
+    "## Token elements\n",
     "\n",
     "Token elements are MathML elements that have text, but no children (see MathML\n",
     "specifications,\n",
@@ -145,7 +156,7 @@
     "Note that any object can be passed as the \"text\" of the token element, provided\n",
     "that it can be converted to a string.\n",
     "\n",
-    "### Creating non-token elements\n",
+    "## Non-token elements\n",
     "\n",
     "Non-token elements are\n",
     "\n",
@@ -235,9 +246,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Building complex expressions with magic functions\n",
+    "# Building complex expressions with special methods\n",
     "\n",
-    "All magic functions of PyMathML objects have been implemented; therefore,\n",
+    "All special functions of PyMathML objects have been implemented; therefore,\n",
     "complex expressions can be built very naturally. For example"
    ]
   },
@@ -307,6 +318,7 @@
     "| ``e1+e2``  | ``<mrow>me1<mo>+</mo>me2</mrow>``                      |\n",
     "| ``e1-e2``  | ``<mrow>me1<mo>-</mo>me2</mrow>``                      |\n",
     "| ``e1*e2``  | ``<mrow>me1<mo>&it;</mo>me2</mrow>``                   |\n",
+    "| ``e1@e2``  | ``<mrow>me1<mo>⋅</mo>me2</mrow>``                      |\n",
     "| ``e1**e2`` | ``<msup>me1 me2</msup>``                               |\n",
     "| ``e1[e2]`` | ``<msub>me1 me2</msub>``                               |\n",
     "| ``e1(e2)`` | ``<mrow>me1<mo>&af;</mo><mfenced>e2</mfenced></mrow>`` |"
@@ -428,7 +440,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Converting PyMathML expressions to MathML"
+    "# Converting PyMathML expressions to MathML"
    ]
   },
   {
