Document the ``tostring`` function

--- a/docs/tutorial.ipynb
+++ b/docs/tutorial.ipynb
@@ -644,6 +644,75 @@
     "mml = tomathml('a', display='inline')\n",
     "print(ET.tostring(mml, encoding=('unicode')))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The function ``tostring`` promotes its argument to a PyMathML expression, and\n",
+    "returns its MathML representation as a string. It takes the same optional\n",
+    "argument ``display`` as the ``tomathml`` function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<mi>a</mi>'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tostring('a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<math display=\"block\" xmlns=\"http://www.w3.org/1998/Math/MathML\"><mi>a</mi></math>'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tostring('a', display='block')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<math display=\"inline\" xmlns=\"http://www.w3.org/1998/Math/MathML\"><mi>a</mi></math>'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tostring('a', display='inline')"
+   ]
   }
  ],
  "metadata": {
