Documentation of unary operations

--- a/docs/tutorial.ipynb
+++ b/docs/tutorial.ipynb
@@ -12,6 +12,8 @@
     "    - [Non-token elements](#Non-token-elements)\n",
     "  - [Building complex expressions with special methods](#Building-complex-expressions-with-special-methods)\n",
     "  - [Converting PyMathML expressions to MathML](#Converting-PyMathML-expressions-to-MathML)\n",
+    "  - [Mathematical operations](#Mathematical-operations)\n",
+    "    - [Unary operations](#Unary-operations)\n",
     "\n",
     "# Introduction\n",
     "\n",
@@ -712,6 +714,106 @@
    ],
    "source": [
     "tostring('a', display='inline')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mathematical operations\n",
+    "\n",
+    "PyMathML defines classes that implement unary, binary and n-ary operations as\n",
+    "compound MathML elements.\n",
+    "\n",
+    "## Unary operations\n",
+    "\n",
+    "Unary operations are derived from the ``UnaryOperation`` class. Examples are\n",
+    "the ``Pos`` and ``Neg`` classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<mrow><mo>+</mo><mi>a</mi></mrow>\n",
+      "<mrow><mo>-</mo><mi>a</mi></mrow>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('{}\\n{}'.format(Pos('a'), Neg('a')))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "which is equivalent to the '+' and '-' unary operators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<mrow><mo>+</mo><mi>a</mi></mrow>\n",
+      "<mrow><mo>-</mo><mi>a</mi></mrow>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = Identifier('a')\n",
+    "print('{}\\n{}'.format(+a, -a))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "New unary operations can be created with the ``unary_operation_type`` function.\n",
+    "For example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<mrow><mo>¬</mo><mi>a</mi></mrow>\n",
+      "\n",
+      "-------------------------------------------------------------------------------\n",
+      "\n",
+      "PyMathML representation of the ``¬`` unary operation.\n",
+      "\n",
+      "Usage: ``Not(operand, **attributes)``\n",
+      "\n",
+      "which produces the following MathML code\n",
+      "\n",
+      "    <mrow>\n",
+      "        <mo>¬</mo>\n",
+      "        operand\n",
+      "    </mrow>\n"
+     ]
+    }
+   ],
+   "source": [
+    "Not = unary_operation_type('Not', '\\N{NOT SIGN}')\n",
+    "print(Not(a))\n",
+    "print('\\n'+(79*'-')+'\\n')\n",
+    "print(inspect.getdoc(Not))"
    ]
   }
  ],
